--- a/Redes-Sociales.html
+++ b/Redes-Sociales.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts.js"></script>asdfawsegfaweg
+    <script src="scripts.js"></script>
     <title>
-        Redes Sociales
+        INFOTEC
     </title>
+    <link rel="icon"  type="imagenes/jpg" href="imagenes/logo.jpg">
 </head>
 <body>
+
+    <!--Barra de navegación-->
     <header class="header">
-        <div class="bloque logo-nav-bloque">
-            <a href="#" class="logo">LOGO</a>
+        <div class="container logo-nav-container">
+            <img src="imagenes/logo.jpg" class="logo">
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
-                <ul>
+                <ul class="show">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
                     <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
@@ -26,88 +29,111 @@
             </nav>
         </div>
     </header>
-    <main class="main">
+    
+    <!--Sección de contenido-->
+    <div class="container">
         <div class="bloque">
             <h1>
                 ¿Qué son las redes sociales?
             </h1>
+            <img src="imagenes/redes sociales.jpg">
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui!
+                Las redes sociales son estructuras formadas en Internet por personas u organizaciones que se conectan a partir de intereses o valores comunes. A través de ellas, se crean relaciones entre individuos o empresas de forma rápida, sin jerarquía o límites físicos.<br>
+                Cuando hablamos de red social, lo que viene a la mente en primer lugar son sitios como Facebook, Twitter y LinkedIn o aplicaciones como Snapchat e Instagram, típicos de la actualidad. Pero la idea, sin embargo, es mucho más antigua: en la sociología, por ejemplo, el concepto de red social se utiliza para analizar interacciones entre individuos, grupos, organizaciones o hasta sociedades enteras desde el final del siglo XIX.
             </p>
+            <h3>
+                ¿Cuando aparecieron?
+            </h3>
+            <p>
+                Fue en la década de 1990, con internet disponible, que la idea de red social emigró también al mundo virtual. El sitio SixDegrees.com, creado en 1997, es considerado por muchos como la primera red social moderna, ya que permitía a los usuarios tener un perfil y agregar a otros participantes en un formato parecido a lo que conocemos hoy. El sitio pionero, que en su auge llegó a tener 3,5 millones de miembros, se cerró en 2001, pero ya no era el único.<br>
+                A principios del milenio, empezaron a surgir páginas dirigidas a la interacción entre usuarios: Friendster, MySpace, Orkut y hi5 son algunos ejemplos de sitios ilustres en el período. Muchas de las redes sociales más populares hoy en día también surgieron en esa época, como LinkedIn y Facebook.<br>
+                No en vano, una encuesta de Hootsuite apunta que, hasta finales de 2016, 2.800 millones de personas usaban redes sociales en el mundo. En este contexto, las empresas también han visto la posibilidad de comunicarse con su público objetivo de forma más intensa, estando presentes en las redes sociales. Para darse una idea, una encuesta de Social Media Trends de 2017 afirma que la mayoría de las empresas tienen uno (31,7%) o dos (31%) profesionales involucrados con redes sociales.
+            </p>
+            <h1>
+                Influencia de las redes sociales en la vida cotidiana
+            </h1>
+            <img src="imagenes/influencia redes.jpg">
+            <p>
+                Antes cualquier grupo de amigos para realizar una quedada tenía que realizar una cada de llamadas desde el teléfono fijo, nos era complicado saber como estaban nuestros familiares lejanos (que estaban tan solo en un pueblo pequeño a 200 kilómetros de la ciudad) o realizar una buena foto familiar y realizar copias a todos los integrantes. Estos son algunos de los aspectos positivos que nos han proporcionado estas redes sociales, que los podemos resumir en un punto COMODIDAD para comunicarnos.
+                Pero como en todas las nuevas tecnologías aplicadas al uso cotidiano, también tiene sus puntos negativos que debemos controlar. Antes en las calles o los parques se veían a adolescentes reunidos, ahora esos encuentros son desde su habitación a través de Skype o jugando en red durante múltiples horas sin querer salir de casa. 
+            </p>
+            <h3>
+                Puntos positivos de las redes sociales
+            </h3>
+            <p>
+                <ul>
+                    <li>
+                        Compartir la visión de la empresa: las redes sociales son una especie de escaparate de su empresa; en ellas podrás mostrar la visión del negocio, en lo que cree.
+                    </li>
+                    <li>
+                        La personalización del mensaje y la interacción directa con el cliente: en las redes sociales, es posible tener una relación mucho más personalizada y directa con cada cliente o posible cliente, ya que puedes entrar en contacto con cada uno, ya sea para resolver problemas o para descubrir nuevas informaciones.
+                    </li>
+                    <li>
+                        Posibilidad de segmentación del público: al publicar en redes sociales, es posible segmentar tus posts de acuerdo con las características de la audiencia, dirigiendo tus esfuerzos hacia aquellos rangos del público que poseen más afinidad con tu solución.
+                    </li>
+                    <li>
+                        Poder saber más sobre cada uno de tus clientes: las personas comparten sus gustos, deseos y otras informaciones que pueden ser valiosas para las empresas a la hora de acercarse a su público objetivo. Manténte atento a lo que es relevante para tu audiencia para conectarse mejor a ella.
+                    </li>
+                    <li>
+                        Posibilidad de vender por estos canales: de la misma forma que es posible relacionarse con el público a través de redes   sociales, es también posible utilizarlas para vender tus productos o servicios, principalmente si abordas aquella audiencia que ya tiene una relación contigo y ya se muestra madura para la compra.
+                    </li>
+                    <li>
+                        Crear un entorno controlado por la marca: independientemente de quién es tu público, este va a estar en alguna red social.
+                    </li>
+                    <li>
+                        Posibilidad de divulgación para empresas con bajo presupuesto: a diferencia de los medios tradicionales, anunciar en las redes sociales tiene un costo más bajo, además de la ventaja de que en la web es mucho más fácil medir los resultados.
+                    </li>
+                    <li>
+                        Información en tiempo real: las redes sociales permiten comunicar mensajes urgentes de la marca en un canal oficial. Esto es muy importante en el caso de la gestión de una crisis, por ejemplo, en el que es necesario que la marca se posicione   rápidamente, evitando así que tome mayores proporciones.
+                    </li>
+                </ul>   
+            </p>
+            </ul>
+            <h1>
+                Top 3 de redes sociales mas usadas en latinoamérica
+            </h1>
+            <img src="imagenes/redes latinoamerica.jpg">
+            <p>
+                De acuerdo con la investigación Digital in 2017, realizada por We Are Social, hay 2.700 millones de usuarios activos en redes sociales en todo el mundo.
+                En Argentina, por ejemplo, la investigación muestra que 70% de la población accede a redes sociales al menos una vez por mes. Por su parte en México este mismo dato llega a ser el 59%.
+            </p>
+            <h3>
+                1.Facebook
+            </h3>
+            <p>
+                De lejos, la red social más popular del planeta. Esta es la red social más versátil y completa. Un lugar para generar negocios, conocer gente, relacionarse con amigos, informarse, divertirse, debatir, entre otras cosas.
+                Para las empresas, es prácticamente imposible no contar con Facebook como aliado en una estrategia de
+                Marketing Digital, ya sea para generar negocios, atraer tráfico o relacionarse con los clientes.
+            </p>
+            <ul>
+                <li>Año de fundación: 2004</li>
+                <li>Usuarios en Latinoamérica: 141 millones</li>
+            </ul>
+            <h3>
+                2.Instagram
+            </h3>
+            <p>
+                Es una red social de compartir fotos y vídeos entre usuarios, con la posibilidad de aplicación de filtros. Originalmente, una peculiaridad de Instagram era la limitación de fotos a un formato cuadrado, imitando las fotografías vintage, como las de cámaras Polaroid. En 2012, la aplicación fue adquirida por Facebook por nada menos que mil millones de dólares. Desde su adquisición, la red social ha cambiado bastante y hoy es posible publicar fotos en diferentes proporciones, vídeos, Stories, boomerangs y otros formatos de publicación.
+            </p>
+            <ul>
+                <li>Año de fundación: 2010</li>
+                <li>Usuarios en Latinoamérica: 60 millones</li>
+            </ul>
+            <h3>
+                3.Linkedin
+            </h3>
+            <p>
+                Se asemeja bastante a las redes de relaciones, pero la diferencia es que su foco son contactos profesionales — es decir, en lugar de amigos, tenemos conexiones, y en lugar de páginas, tenemos empresas. Es utilizado por muchas empresas para reclutamiento de profesionales, para el intercambio de experiencias profesionales en comunidades y otras actividades relacionadas al mundo corporativo.
+            </p>
+            <ul>
+                <li>Año de fundación: 2002</li>
+                <li>Usuarios en Latinoamérica: 22,8 millones</li>
+            </ul>
+            <a href="https://www.rdstation.com/es/redes-sociales/#linkedin" class="links">Fuente de toda la información</a>
         </div>
-    </main>      
+    </div>
+
+    <!--Pie de página-->
     <footer>
         <div class="container-footer-all">
             <div class="container-body">
@@ -119,9 +145,6 @@
                         Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología en distintos 
                         ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo disfrutes.
                     </p>
-                    <div class="copyright">
-                        © 2021 Todos los Derechos Reservados
-                    </div>
                 </div>
                 <div class="colum2">
                     <h1>
@@ -169,8 +192,11 @@
                         </label>
                     </div>
                 </div>
-            </div>
-        </div>  
+            </div>  
+        </div>     
+        <div class="container-footer">
+            <div class="copyright">© 2021 Todos los Derechos Reservados</div>
+        </div>
     </footer>
 </body>
 </html>
