--- a/Tendencias.html
+++ b/Tendencias.html
@@ -8,16 +8,18 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts.js"></script>
     <title>
-        Tendencias
+        INFOTEC
     </title>
 </head>
 <body>
+
+    <!--Barra de navegación-->
     <header class="header">
-        <div class="bloque logo-nav-bloque">
-            <a href="#" class="logo">LOGO</a>
+        <div class="container logo-nav-container">
+            <img src="imagenes/logo.jpg" class="logo">
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
-                <ul>
+                <ul class="show">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
                     <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
@@ -26,12 +28,14 @@
             </nav>
         </div>
     </header>
-    <main class="main">
+
+    <!--Sección de contenido-->
+    <div class="container">
         <div class="bloque">
-            <!--<img src="imagenes/realidad-virtual.jpg" class="imagen1">-->
             <h1>
                 Realidad virtual y aumentada
             </h1>
+            <img src="imagenes/realidad-virtual.jpg" class="imagen1">
             <p>
                 Talkwalker y HubSpot realizaron un estudio sobre las tendencias en redes sociales de 2020 en el cual se dio a conocer, que las conversaciones sobre realidad aumentada y realidad virtual tuvieron 13,2 millones de interacciones en el primer trimestre de 2019 y el 5% de estas menciones fueron en torno al marketing.<br>
                 La realidad aumentada y la realidad virtual son los grandes desarrollos de la tecnología, siendo integradas a distintas aplicaciones e incluso a las redes sociales. Se espera que éstas sean una de las grandes tendencias en el 2020 para impulsar la experiencia del usuario y la gamificación. 
@@ -50,11 +54,10 @@
                 Un ámbito donde ya se usa con regularidad la realidad aumentada es la moda, por la posibilidad de probarte ropa virtualmente y ver cómo nos queda.
                 También hay ya dispositivos para realidad aumentada en el terreno de la óptica, para probarnos gafas, o del maquillaje.
             </p>
-            <div class="bloque"></div>
-                <!--<img src="imagenes/imagen2.jpg.jpg" class="imagen2">-->           
             <h1>
                 El internet de las cosas
             </h1>
+            <img src="imagenes/imagen2.jpg" class="imagen2">  
             <p>    
                 Es un concepto que se refiere a una interconexión digital de objetos cotidianos con internet.​​ 
                 Es, en definitiva, la conexión de internet más con objetos que con personas.​ También se suele conocer como internet de todas las cosas o internet en las cosas.
@@ -79,7 +82,9 @@
                 <b>Agricultura, ganadería y silvicultura:<br></b> Se usan dispositivos IoT para la automatización de tareas fundamentales en la agricultura y silvicultura como es la detección y control de plagas y enfermedades o la satisfacción de las necesidades de las plantas (abonado, riego automático, etc.), así como para la cosecha, indicando el momento óptimo de recolección. En el caso de los animales, sirven para su seguimiento biométrico y geolocalización, además de poder chequear el estado de salud del animal y sus necesidades (alimentación, retirada de abono, etc.).
             </p>
         </div>
-    </main>      
+    </div> 
+
+    <!--Pie de página-->
     <footer>
         <div class="container-footer-all">
             <div class="container-body">
@@ -91,9 +96,6 @@
                         Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología en distintos 
                         ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo disfrutes.
                     </p>
-                    <div class="copyright">
-                        ©️ 2021 Todos los Derechos Reservados
-                    </div>
                 </div>
                 <div class="colum2">
                     <h1>
@@ -141,8 +143,11 @@
                         </label>
                     </div>
                 </div>
-            </div>
-        </div>   
+            </div>  
+        </div>     
+        <div class="container-footer">
+            <div class="copyright">© 2021 Todos los Derechos Reservados</div>
+        </div>
     </footer>
 </body>
 </html>
