--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts.js"></script>
     <title>
-        Tecnología
+        INFOTEC
     </title>
 </head>
 <body>
+    <!--Barra de navegación-->
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo">LOGO</a>
+            <img src="imagenes/logo.jpg" class="logo">
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
                 <ul class="show">
@@ -26,52 +27,47 @@
             </nav>
         </div>
     </header>
-    <!-- SHOWCASE -->
-    <header class="showcase">
-        <h2>Big News Today!</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id dolor laudantium rerum, excepturi est praesentium
-          natus qui? Tempora rerum, numquam inventore eligendi in, nostrum reprehenderit, eum cumque fugit eaque
-          similique!</p>
-        <a href="#" class="btn">
-          SignUp <i class="fas fa-chevron-right"></i>
-        </a>
-    </header>
+
+    <!--Apartado principal-->
+   <div class="container"> 
+       <header class="showcase">
+           <h2>Entérate de lo último en técnología</h2>
+           <p>
+               Te gusta la tecnología y te interesa saber lo que está marcando tendencia en el mundo infomático.<br>
+               Estás en el lugar correcto, disfruta de tu recorrido en esta página.<br>
+           </p>
+       </header>
   
-      <!-- NEWS CARDS -->
+    <!--Sección de resumenes del contenido-->
     <div class="news-cards">
         <div>
-          <img src="imagenes/news1.jpg" alt="" />
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-          </p>
-          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            <img src="imagenes/news1.jpg"/>
+            <h3>Redes Sociales</h3>
+            <p>
+                Las redes sociales son estructuras formadas en Internet por personas u organizaciones que se conectan a partir de intereses o valores comunes. A través de ellas, se crean relaciones entre individuos o empresas de forma rápida, sin jerarquía o límites físicos. Esto genera mayor comunicación e interacción entre las personas. Asi aseguramos un futuro conectado entre cada persona, lo cual abrira viejas brechas de distancia enrre todos.
+            </p>
+            <a href="Redes-Sociales.html" class="links">Learn More</a>
         </div>
         <div>
-          <img src="imagenes/news2.jpg" alt="" />
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-          </p>
-          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            <img src="imagenes/news2.jpg"/>
+            <h3>Desarrollo Web</h3>
+            <p>
+                Desarrollo web significa construir y mantener sitios web; es el trabajo que tiene lugar en un segundo plano y que permite que una web tenga una apariencia impecable, un funcionamiento rápido y un buen desempeño para permitir la mejor experiencia de usuario. Los desarrolladores web son como duendes con poderes: nunca los ves, pero son los que hacen que todo esté bien y funcione de manera rápida y eficiente.
+            </p>
+            <a href="Desarrollo-Web.html" class="links">Learn More</a>
         </div>
         <div>
-          <img src="imagenes/news3.jpg" alt="" />
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-          </p>
-          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            <img src="imagenes/news3.jpg"/>
+            <h3>Tendencias</h3>
+            <p>
+                Es necesario rediseñar modelos de negocio, productos y servicios (estandarizar componentes, simplificar diseños, cambiar insumos, adecuar niveles de servicio y tiempos de respuesta), así como la cadena de suministro actual (mejorar la visibilidad, hallar proveedores y modos de transporte alternos, redefinir políticas de inventarios, redefinir la composición de la cadena). La distribución también debe replantearse, considerando el contexto actual (última milla, restricciones horarias y de recursos, entre otros
+            </p>
+            <a href="Tendencias.html" class="links">Learn More</a>
         </div>
-        <div>
-          <img src="imagenes/news4.jpg" alt="" />
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-          </p>
-          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
-        </div>
+       </div> 
     </div>
+
+    <!--Pie de página-->
     <footer>
         <div class="container-footer-all">
             <div class="container-body">
@@ -83,9 +79,6 @@
                         Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología en distintos 
                         ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo disfrutes.
                     </p>
-                    <div class="copyright">
-                        © 2021 Todos los Derechos Reservados
-                    </div>
                 </div>
                 <div class="colum2">
                     <h1>
@@ -135,6 +128,9 @@
                 </div>
             </div>  
         </div>     
+        <div class="container-footer">
+            <div class="copyright">© 2021 Todos los Derechos Reservados</div>
+        </div>
     </footer>
 </body>
 </html>
