--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">    
 <head>
     <meta charset="UTF-8">
@@ -8,16 +8,17 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts.js"></script>
     <title>
-        Desarrollo Web
+        INFOTEC
     </title>
 </head>
 <body>
+    <!--Barra de navegación-->
     <header class="header">
-        <div class="bloque logo-nav-bloque">
-            <a href="#" class="logo">LOGO</a>
+        <div class="container logo-nav-container">
+            <img src="imagenes/logo.jpg" class="logo">
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
-                <ul>
+                <ul class="show">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
                     <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
@@ -26,12 +27,14 @@
             </nav>
         </div>
     </header>
-    <main class="main">
+    
+    <!--Sección de contenido-->
+    <div class="container">
         <div class="bloque">
-            <img src= "imagenes/Imagen html proyecto.jpg.png">       
             <h1>
                 ¿Qué es HTML?
             </h1>
+            <img src="imagenes/Imagen html proyecto.jpg" >       
             <p>
                 HTML significa lenguaje de marcado de hipertexto,y le permite al usuario crear y estructurar secciones,
                 párrafos, encabezados, enlaces y elementos de cita en bloque(blockquotes) para páginas web y aplicaciones.<br>
@@ -69,6 +72,7 @@
             <h1>
                 ¿Qué es CSS?
             </h1>
+            <img src="imagenes/imagen css proyecto.jpg">
             <P>
                 CSS (en inglés <i>Cascading Style Sheets</i>) es lo que se denomina lenguaje de hojas de estilo en cascada y se usa para estilizar elementos escritos en un lenguaje de marcado como HTML.<br>
                 CSS separa el contenido de la representación visual del sitio. La relación entre HTML y CSS es muy fuerte. Dado que HTML es un lenguaje de marcado (es decir, constituye la base de un sitio) y CSS enfatiza el estilo (toda la parte estética de un sitio web), van de la mano.
@@ -100,6 +104,7 @@
             <h1>
                   ¿Qué es JavaScript?
             </h1>
+            <img src="imagenes/imagen javascript proyecto.jpg">
             <p>
                 JavaScript es un lenguaje de programación o de secuencias de comandos que le permite implementar funciones complejas en páginas web, cada vez que una 
                 página web hace algo más que sentarse allí y mostrar información estática para que la veas, muestra oportunas actualizaciones de contenido, mapas interactivos,
@@ -126,7 +131,9 @@
                 Su uso en aplicaciones externas a la web, por ejemplo en documentos PDF, aplicaciones de escritorio (mayoritariamente widgets) es también significativo.
             </p>
         </div>
-    </main>      
+    </div> 
+
+    <!--Pie de página-->
     <footer>
         <div class="container-footer-all">
             <div class="container-body">
@@ -138,9 +145,6 @@
                         Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología en distintos 
                         ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo disfrutes.
                     </p>
-                    <div class="copyright">
-                        © 2021 Todos los Derechos Reservados
-                    </div>
                 </div>
                 <div class="colum2">
                     <h1>
@@ -188,8 +192,11 @@
                         </label>
                     </div>
                 </div>
-            </div>
-        </div>  
+            </div>  
+        </div>     
+        <div class="container-footer">
+            <div class="copyright">© 2021 Todos los Derechos Reservados</div>
+        </div>
     </footer>
 </body>
 </html>
