modificando los titulos de pestaña

--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -8,8 +8,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts.js"></script>
     <title>
-        INFOTEC
+        Desarrollo Web | INFOTEC
     </title>
+    <link rel="icon"  type="imagenes/jpg" href="imagenes/logo.jpg">
 </head>
 <body>
     <!--Barra de navegación-->
@@ -19,7 +20,7 @@
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
                 <ul class="show">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Inicio.html">Inicio</a></li>
                     <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
                     <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
                     <li><a href="Tendencias.html">Tendencias</a></li>
