--- a/Inicio.html
+++ b/Inicio.html
@@ -8,8 +8,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts.js"></script>
     <title>
-        INFOTEC
+        INFOTEC | Sitio Oficial
     </title>
+    <link rel="icon"  type="imagenes/jpg" href="imagenes/logo.jpg">
 </head>
 <body>
     <!--Barra de navegación-->
