--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">    
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="estilo.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts.js"></script>
     <title>
         Desarrollo Web | INFOTEC
     </title>
-    <link rel="icon"  type="imagenes/jpg" href="imagenes/logo.jpg">
+    <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
+    <link rel=StyleSheet href="CSS/web.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!--Barra de navegación-->
     <header class="header">
@@ -28,176 +29,25 @@
             </nav>
         </div>
     </header>
-    
-    <!--Sección de contenido-->
-    <div class="container">
-        <div class="bloque">
-            <h1>
-                ¿Qué es HTML?
-            </h1>
-            <img src="imagenes/Imagen html proyecto.jpg" >       
-            <p>
-                HTML significa lenguaje de marcado de hipertexto,y le permite al usuario crear y estructurar secciones,
-                párrafos, encabezados, enlaces y elementos de cita en bloque(blockquotes) para páginas web y aplicaciones.<br>
-                Cuando trabajamos con HTML, utilizamos estructuras de código simples
-                (etiquetas y atributos) para marcar una página web.Y asi podriamos empezar a maquetar nuestra página web desde cero. 
-            </p>    
-            <h3>
-                Historia del HTML 
-            </h3>
-            <p>
-                HTML fue inventado por <i>Tim Berners-Lee</i>, un físico del instituto de investigación 
-                CERN en Suiza. Se le ocurrió la idea de un sistema de hipertexto basado en Internet.
-                Hipertexto significa un texto que contiene referencias (links) a otros textos a los
-                que los usuarios pueden acceder de inmediato.<br> Publicó la primera versión de HTML en 1991,
-                que constaba de 18 etiquetas HTML.<br> Desde entonces, cada nueva versión del lenguaje HTML
-                viene con nuevas etiquetas y atributos (modificadores de etiqueta) para el marcado.
-                Según la Referencia de elementos HTML de <i>Mozilla Developer Network</i>, actualmente hay 140
-                etiquetas HTML, aunque algunas de ellas ya están obsoletas (no son compatibles con los
-                navegadores modernos).Debido a un rápido aumento de la popularidad HTML ahora se considera un estándar web oficial.<br>
-                Las especificaciones de HTML son mantenidas y desarrolladas por el <i>World Wide Web Consortium</i> (W3C).
-                Puedes consultar el último estado del lenguaje en cualquier momento en el sitio web de W3C.
-            </p>
-            <h3> 
-                ¿Cómo funciona HTML?
-            </h3>
-            <p>
-                Los documentos HTML son archivos que terminan con una extensión .html o .htm.
-                Puedes verlos usando cualquier navegador web (como Google Chrome, Safari o Mozilla Firefox).<br>
-                El navegador lee el archivo HTML y muestra su contenido para que los usuarios de Internet puedan verlo.
-                Por lo general, el sitio web promedio incluye varias páginas HTML diferentes.<br>
-                Por ejemplo: las páginas de inicio, las páginas de acerca de y las páginas de contacto, todas tendrán documentos HTML separados.
-                Cada página HTML consta de un conjunto de etiquetas(también denominadas elementos), a las que te puedesreferir como los componentes básicos de las páginas web.
-                Crean una jerarquía que estructura el contenido en secciones, párrafos, encabezados y otros bloques de contenido.
-            </p>
-            <h1>
-                ¿Qué es CSS?
-            </h1>
-            <img src="imagenes/imagen css proyecto.jpg">
-            <P>
-                CSS (en inglés <i>Cascading Style Sheets</i>) es lo que se denomina lenguaje de hojas de estilo en cascada y se usa para estilizar elementos escritos en un lenguaje de marcado como HTML.<br>
-                CSS separa el contenido de la representación visual del sitio. La relación entre HTML y CSS es muy fuerte. Dado que HTML es un lenguaje de marcado (es decir, constituye la base de un sitio) y CSS enfatiza el estilo (toda la parte estética de un sitio web), van de la mano.
-                CSS no es técnicamente una necesidad, pero no querrás tener un sitio que solo tenga HTML, ya que se vería completamente desnudo.
-            </P>
-            <h3>
-                Historia del CSS
-            </h3>
-            <p>
-                CSS fue desarrollado por <i>World Wide Web Consortium</i> (W3C) en 1996 por una razón muy sencilla.
-                HTML no fue diseñado para tener etiquetas que ayuden a formatear la página. 
-                Está hecho solo para escribir el marcado para el sitio.<br>
-                Se incluyeron etiquetas como &lt/font&gt en HTML versión 3.2, y esto les causó muchos problemas 
-                a los desarrolladores. Dado que los sitios web tenían diferentes fuentes, fondos de colores
-                y estilos, el proceso de reescribir el código fue largo, doloroso y costoso. Por lo tanto,
-                CSS fue creado por W3C para resolver este problema.
-            </p>
-            <h3>
-                ¿Comó  funciona CSS? 
-            </h3>
-            <p>
-            CSS utiliza una sintaxis simple basada en el inglés con un conjunto de reglas que la gobiernan. Como mencionamos anteriormente, HTML no fue hecho con la intención de utilizar elementos de 
-            estilo, sino solo para el marcado de la página. Fue creado simplemente para describir el contenido. Sin embargo, hay reglas que debes recordar. Las reglas de la estructura son bastante simples,
-            así que no te preocupes.<br>
-            El selector apunta al elemento HTML que deseas estilizar. El bloque de declaración contiene una o más declaraciones separadas por punto y coma.
-            Cada declaración incluye un nombre de propiedad CSS y un valor, separados por dos puntos.
-            Una declaración CSS siempre termina con un punto y coma, y ​​los bloques de declaración están rodeados por llaves.
-            </p>
-            <h1>
-                  ¿Qué es JavaScript?
-            </h1>
-            <img src="imagenes/imagen javascript proyecto.jpg">
-            <p>
-                JavaScript es un lenguaje de programación o de secuencias de comandos que le permite implementar funciones complejas en páginas web, cada vez que una 
-                página web hace algo más que sentarse allí y mostrar información estática para que la veas, muestra oportunas actualizaciones de contenido, mapas interactivos,
-                animación de Gráficos 2D/3D, desplazamiento de máquinas reproductoras de vídeo, etc., puedes apostar que probablemente JavaScript está involucrado.
-            </p>     
-            <h3>
-                Historia de Java Script
-            </h3>
-            <p>
-                JavaScript fue desarrollado originalmente por <i>Brendan Eich</i> de Netscape con el nombre de Mocha, el cual
-                fue renombrado posteriormente a LiveScript, para finalmente quedar como JavaScript.<br> El cambio de nombre
-                coincidió aproximadamente con el momento en que Netscape agregó compatibilidad con la tecnología Java
-                en su navegador web Netscape Navigator en la versión 2002 en diciembre de 1995. La denominación produjo confusión,
-                dando la impresión de que el lenguaje es una prolongación de Java, y se ha caracterizado por muchos como una estrategia
-                de mercadotecnia de Netscape para obtener prestigio e innovar en el ámbito de los nuevos lenguajes de programación web.
-            </p>
-            <h3> 
-                ¿Cómo funciona Java Script?
-            </h3>
-            <p>
-                Se utiliza principalmente del lado del cliente, implementado como parte de un navegador web permitiedo
-                mejoras en la interfaz de usuario y páginas web dinámicas​ y JavaScript del lado del servidor
-                (Server-side JavaScript o SSJS).<br>
-                Su uso en aplicaciones externas a la web, por ejemplo en documentos PDF, aplicaciones de escritorio (mayoritariamente widgets) es también significativo.
-            </p>
-        </div>
-    </div> 
 
-    <!--Pie de página-->
-    <footer>
-        <div class="container-footer-all">
-            <div class="container-body">
-                <div class="colum1">
-                    <h1>
-                        Información del grupo de trabajo
-                    </h1>
-                    <p>
-                        Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología en distintos 
-                        ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo disfrutes.
-                    </p>
-                </div>
-                <div class="colum2">
-                    <h1>
-                        Redes Sociales
-                    </h1>
-                    <div class="row">
-                        <img src="Iconos/facebook.png">
-                        <label>
-                            Siguenos en Facebook
-                        </label>
-                    </div>
-                    <div class="row">
-                        <img src="Iconos/twitter.png">
-                        <label>
-                            Siguenos en Twitter
-                        </label>
-                    </div>
-                    <div class="row">
-                        <img src="Iconos/instagram.png">
-                        <label>
-                            Siguenos en Instagram
-                        </label>
-                    </div>
-                </div>
-                <div class="colum3">
-                    <h1>
-                        Contáctanos
-                    </h1>
-                    <div class="row2">
-                        <img src="Iconos/house.png">
-                        <label>
-                            Perú, Lima.
-                        </label>
-                    </div>
-                    <div class="row2">
-                        <img src="Iconos/smartphone.png">
-                        <label>
-                            +51 987654321
-                        </label>
-                    </div>
-                    <div class="row2">
-                        <img src="Iconos/contact.png">
-                        <label>
-                            grupodevs@gmail.com
-                        </label>
-                    </div>
-                </div>
-            </div>  
-        </div>     
-        <div class="container-footer">
-            <div class="copyright">© 2021 Todos los Derechos Reservados</div>
+    <!-- Imagen Header -->
+    <figure class="img-header">
+        <div class="bienvenida">
+            <h2><b>"DESARROLLO WEB"</b>
+                <i class="fas fa-chalkboard-teacher"></i>
+            </h2>
         </div>
-    </footer>
+    </figure>
+
+
+
+
+
+
+    <!-- SCRIPTS-->
+    <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
 </body>
+
 </html>
