Agregando una introducción

--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
     <link rel=StyleSheet href="CSS/web.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
 </head>
 
 <body>
@@ -38,7 +40,45 @@
             </h2>
         </div>
     </figure>
+    <!-- Acerca de nosotros -->
+    <section class="about-us">
+        <div class="info">
+            <h3>Introducción</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, dolorum ab quia et nesciunt consequuntur, eius, temporibus fugiat natus nam vero. Ipsa aliquid, aspernatur est quibusdam eaque voluptatibus itaque impedit!
+            Sunt voluptatum deleniti porro voluptas quas error! Provident quas eveniet error porro iste officia quidem minima inventore, omnis vel veniam reprehenderit temporibus quos autem nostrum harum placeat, similique eos ab?
+            Rerum deserunt quaerat eum dolore veritatis aut sed consectetur? Nobis soluta, maxime eum voluptatibus similique consequuntur sint asperiores excepturi, reiciendis sequi mollitia quam neque sapiente saepe magni natus. Maxime, veniam.
+            </p>
+            <hr>
+        </div>
 
+        <div class="free-content">
+            <h4><b>TIPOS DE USOS</b></h4>
+            <div class="icons">
+                <div>
+                    <div class="iconos"><span><i class="fas fa-user-edit"></i></span></div>
+                    <h6>Html</h6>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
+                        itaque.</p>
+                </div>
+
+                <div>
+                    <div class="iconos"><span><i class="fas fa-chalkboard-teacher"></i>
+                        </span></div>
+                    <h6>Css3</h6>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
+                        itaque.</p>
+                </div>
+
+                <div>
+                    <div class="iconos"><span><i class="fas fa-headset"></i></span></div>
+                    <h6>JavaScript</h6>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
+                        itaque.</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
 
