--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -10,6 +10,7 @@
     </title>
     <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
     <link rel=StyleSheet href="CSS/web.css" type="text/css">
+    <link rel=StyleSheet href="CSS/secciones.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
@@ -43,20 +44,25 @@
     <!-- Acerca de nosotros -->
     <section class="about-us">
         <div class="info">
-            <h3>Introducción</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, dolorum ab quia et nesciunt consequuntur, eius, temporibus fugiat natus nam vero. Ipsa aliquid, aspernatur est quibusdam eaque voluptatibus itaque impedit!
-            Sunt voluptatum deleniti porro voluptas quas error! Provident quas eveniet error porro iste officia quidem minima inventore, omnis vel veniam reprehenderit temporibus quos autem nostrum harum placeat, similique eos ab?
-            Rerum deserunt quaerat eum dolore veritatis aut sed consectetur? Nobis soluta, maxime eum voluptatibus similique consequuntur sint asperiores excepturi, reiciendis sequi mollitia quam neque sapiente saepe magni natus. Maxime, veniam.
+            <h3><b>INTRODUCCIÓN</b></h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, dolorum ab quia et nesciunt
+                consequuntur, eius, temporibus fugiat natus nam vero. Ipsa aliquid, aspernatur est quibusdam eaque
+                voluptatibus itaque impedit!
+                Sunt voluptatum deleniti porro voluptas quas error! Provident quas eveniet error porro iste officia
+                quidem minima inventore, omnis vel veniam reprehenderit temporibus quos autem nostrum harum placeat,
+                similique eos ab?
+                Rerum deserunt quaerat eum dolore veritatis aut sed consectetur? Nobis soluta, maxime eum voluptatibus
+                similique consequuntur sint asperiores excepturi, reiciendis sequi mollitia quam neque sapiente saepe
+                magni natus. Maxime, veniam.
             </p>
-            <hr>
         </div>
 
         <div class="free-content">
-            <h4><b>TIPOS DE USOS</b></h4>
+            <h4><b>Title</b></h4>
             <div class="icons">
                 <div>
                     <div class="iconos"><span><i class="fas fa-user-edit"></i></span></div>
-                    <h6>Html</h6>
+                    <h6 id="html">Html</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
@@ -64,30 +70,244 @@
                 <div>
                     <div class="iconos"><span><i class="fas fa-chalkboard-teacher"></i>
                         </span></div>
-                    <h6>Css3</h6>
+                    <h6 id="css">Css3</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
 
                 <div>
                     <div class="iconos"><span><i class="fas fa-headset"></i></span></div>
-                    <h6>JavaScript</h6>
+                    <h6 id="javascript">JavaScript</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
 
             </div>
+            
         </div>
     </section>
+    <!-- SECCIONES -->
+    <section class="more-html">
+        <div class="html">
+            <h3><b>Html</b></h3>
+        </div>
+        <section id="tarjetas">
+            <div class="tarjetas" id="card1-html">
+                <img src="CSS/img/html.jpg" alt="IMAGEN">
+                <h2>LOREM IPSUM</h2>
+                <hr>
+                <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos aliquid
+                    optio </p>
+                <hr>
+                <p class="parrafo">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste tempora, dolor delectus omnis ut
+                    itaque, dignissimos fugiat porro dicta facilis aspernatur dolores. Repudiandae veniam necessitatibus
+                    at impedit illum, deleniti iste?
+                </p>
+            </div>
+
+            <div class="tarjetas" id="card2-html">
+                <img src="CSS/img/html.jpg" alt="IMAGEN">
+                <h2>LOREM IPSUM</h2>
+                <hr>
+                <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos aliquid
+                    optio</p>
+                <hr>
+                <p class="parrafo">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt inventore voluptas quas dolorem
+                    atque aliquam tempora cum sit fugiat reprehenderit! Nulla quidem libero corrupti magni itaque dicta
+                    nihil voluptate inventore.
+                </p>
+            </div>
+
+            <div class="tarjetas" id="card3-html">
+                <img src="CSS/img/html.jpg" alt="IMAGEN">
+                <h2>LOREM IPSUM</h2>
+                <hr>
+                <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos aliquid
+                    optio</p>
+                <hr>
+                <p class="parrafo">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus consequatur dolorem, a
+                    quos excepturi delectus labore sit ullam nesciunt assumenda atque nobis fugiat aliquid molestiae
+                    beatae dolor libero cupiditate.
+                </p>
+            </div>
+        </section>
+
+        <section class="more-css">
+            <div class="css">
+                <h3><b>Css3</b></h3>
+            </div>
+            <section id="tarjetas">
+                <div class="tarjetas" id="card1-css">
+                    <img src="CSS/img/css.jpg" alt="IMAGEN">
+                    <h2>LOREM IPSUM</h2>
+                    <hr>
+                    <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
+                        aliquid optio </p>
+                    <hr>
+                    <p class="parrafo">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste tempora, dolor delectus omnis ut
+                        itaque, dignissimos fugiat porro dicta facilis aspernatur dolores. Repudiandae veniam
+                        necessitatibus at impedit illum, deleniti iste?
+                    </p>
+                </div>
+
+                <div class="tarjetas" id="card2-css">
+                    <img src="CSS/img/css.jpg" alt="IMAGEN">
+                    <h2>LOREM IPSUM</h2>
+                    <hr>
+                    <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
+                        aliquid optio</p>
+                    <hr>
+                    <p class="parrafo">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt inventore voluptas quas
+                        dolorem atque aliquam tempora cum sit fugiat reprehenderit! Nulla quidem libero corrupti magni
+                        itaque dicta nihil voluptate inventore.
+                    </p>
+                </div>
+
+                <div class="tarjetas" id="card3-css">
+                    <img src="CSS/img/css.jpg" alt="IMAGEN">
+                    <h2>LOREM IPSUM</h2>
+                    <hr>
+                    <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
+                        aliquid optio</p>
+                    <hr>
+                    <p class="parrafo">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus consequatur dolorem, a
+                        quos excepturi delectus labore sit ullam nesciunt assumenda atque nobis fugiat aliquid molestiae
+                        beatae dolor libero cupiditate.
+                    </p>
+                </div>
+            </section>
+
+
+            <section class="more-javascript">
+                <div class="javascript">
+                    <h3><b>JavaScript</b></h3>
+                </div>
+                <section id="tarjetas">
+                    <div class="tarjetas" id="card1-javascript">
+                        <img src="CSS/img/java.jpg" alt="IMAGEN">
+                        <h2>LOREM IPSUM</h2>
+                        <hr>
+                        <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
+                            aliquid optio </p>
+                        <hr>
+                        <p class="parrafo">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste tempora, dolor delectus omnis
+                            ut itaque, dignissimos fugiat porro dicta facilis aspernatur dolores. Repudiandae veniam
+                            necessitatibus at impedit illum, deleniti iste?
+                        </p>
+                    </div>
+
+                    <div class="tarjetas" id="card2-javascript">
+                        <img src="CSS/img/java.jpg" alt="IMAGEN">
+                        <h2>LOREM IPSUM</h2>
+                        <hr>
+                        <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
+                            aliquid optio</p>
+                        <hr>
+                        <p class="parrafo">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt inventore voluptas quas
+                            dolorem atque aliquam tempora cum sit fugiat reprehenderit! Nulla quidem libero corrupti
+                            magni itaque dicta nihil voluptate inventore.
+                        </p>
+                    </div>
+
+                    <div class="tarjetas" id="card3-javascript">
+                        <img src="CSS/img/java.jpg" alt="IMAGEN">
+                        <h2>LOREM IPSUM</h2>
+                        <hr>
+                        <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
+                            aliquid optio</p>
+                        <hr>
+                        <p class="parrafo">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus consequatur
+                            dolorem, a quos excepturi delectus labore sit ullam nesciunt assumenda atque nobis fugiat
+                            aliquid molestiae beatae dolor libero cupiditate.
+                        </p>
+                    </div>
+                </section>
+                <!--Pie de página-->
+                <footer>
+                    <div class="container-footer-all">
+                        <div class="container-body">
+                            <div class="colum1">
+                                <h1>
+                                    Información del grupo de trabajo
+                                </h1>
+                                <p>
+                                    Somos un grupo de desarrolladores web interesados en compartir información sobre la
+                                    tecnología
+                                    en distintos
+                                    ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que
+                                    lo
+                                    disfrutes.
+                                </p>
+                            </div>
+                            <div class="colum2">
+                                <h1>
+                                    Redes Sociales
+                                </h1>
+                                <div class="row">
+                                    <img src="Iconos/facebook.png">
+                                    <label>
+                                        Siguenos en Facebook
+                                    </label>
+                                </div>
+                                <div class="row">
+                                    <img src="Iconos/twitter.png">
+                                    <label>
+                                        Siguenos en Twitter
+                                    </label>
+                                </div>
+                                <div class="row">
+                                    <img src="Iconos/instagram.png">
+                                    <label>
+                                        Siguenos en Instagram
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="colum3">
+                                <h1>
+                                    Contáctanos
+                                </h1>
+                                <div class="row2">
+                                    <img src="Iconos/house.png">
+                                    <label>
+                                        Perú, Lima.
+                                    </label>
+                                </div>
+                                <div class="row2">
+                                    <img src="Iconos/smartphone.png">
+                                    <label>
+                                        +51 987654321
+                                    </label>
+                                </div>
+                                <div class="row2">
+                                    <img src="Iconos/contact.png">
+                                    <label>
+                                        grupodevs@gmail.com
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-footer">
+                        <div class="copyright">© 2021 Todos los Derechos Reservados</div>
+                    </div>
+                </footer>
 
 
 
 
-
-    <!-- SCRIPTS-->
-    <script src="scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
+                <!-- SCRIPTS-->
+                <script src="scripts.js"></script>
+                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
 </body>
 
 </html>
